tests/reject/fixed_array_zero_size.ty
# A fixed-array length must be positive.
fn main():
    v: [0]int = []
    print("x")
